--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>RadioPlatform</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="modifiedlogoRadioPlatform.svg">
-    <script src="canvas.js"></script>
 </head>
 <body>
     <div id="navbar">
-        <img src="modifiedlogoRadioPlatform.svg">
+        <img alt="Decorative logo" src="modifiedlogoRadioPlatform.svg">
         <img id="hamburger" src="assets/hamburger.png">
         <nav>
             <div class="link" id="link1"><a href="#first">RadioPlatform - A platform for Radio Amateurs</a></div>
@@ -21,7 +20,7 @@
     </div>
     <header>
         <div id="welcomescreen">
-            <video autoplay muted loop>
+            <video alt="Decorative video" autoplay muted loop>
                 <source src="radio.mp4" type="video/mp4">
             </video>
             <h2 id="first">RadioPlatform - A Platform for Radio Amateurs</h1>
@@ -88,5 +87,6 @@
 <div id="buttonContainer">
     <canvas alt="Enter RadioPlatform" id="button" width="200" height="100"></canvas>
 </div>
+<script src="canvas.js"></script>
 </body>
 </html>
