Changed video location

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div id="welcomescreen">
             <video alt="Decorative video" autoplay muted loop>
-                <source src="radio.mp4" type="video/mp4">
+                <source src="assets/radio.mp4" type="video/mp4">
             </video>
             <h2 id="first">RadioPlatform - A Platform for Radio Amateurs</h1>
         </div>
