Added github pic

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <img src="assets/socketio.jfif" alt="Socketio">
     <img src="assets/leaflet.png" alt="Leaflet">
     <img src="assets/heroku.png" alt="Heroku">
+    <img src="assets/github.png" alt="Github Pages">
 </div>
 <h2 id="fourth">Why radio amateur?</h2>
 <p>Radio Amateur is an amazing hobby! You can listen to anything you want, and we mean it; you can find new friends, listen to problems in your WIFI, even communicate in disasters!</p>
