--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="navbar">
         <img alt="Decorative logo" src="modifiedlogoRadioPlatform.svg">
-        <img id="hamburger" src="assets/hamburger.png">
+        <img id="hamburger" src="assets/hamburger.png" alt="Hamburger menu">
         <nav>
             <div class="link" id="link1"><a href="#first">RadioPlatform - A platform for Radio Amateurs</a></div>
             <div class="link" id="link2"><a href="#second">Functionality</a></div>
